public/stylesheets/scenarios.css
/* ... */
body#scenarios_new section#questions, body#scenarios_create section#questions {
  width: 420px;
  float: left;
  background-color: #fdfdfd;
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fdfdfd"}, endColorstr="#eeeeee");
  background-image: -moz-linear-gradient(center top, #fdfdfd, #eeeeee);
  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fdfdfd), to(#eeeeee));
  -moz-box-shadow: 0 2px 3px 3px #dddddd;
  -webkit-box-shadow: 0 2px 3px 3px #dddddd;
  box-shadow: 0 2px 3px 3px #dddddd;
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#dddddd')";
  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='$color');
  line-height: 1.5em;
  background-color: #eeeeee; }
  body#scenarios_new section#questions nav, body#scenarios_create section#questions nav {
    background-color: #fdfdfd;
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fdfdfd"}, endColorstr="#eeeeee");
    background-image: -moz-linear-gradient(center top, #fdfdfd, #eeeeee);
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fdfdfd), to(#eeeeee));
    border: 1px solid #eee;
    display: block;
    text-align: center;
    height: 20px;
    padding: 4px;
    font-size: 10px; }
    body#scenarios_new section#questions nav a, body#scenarios_create section#questions nav a {
      margin: 0 5px;
      color: #bbbbbb;
      font-weight: bold; }
    body#scenarios_new section#questions nav#up a.active, body#scenarios_create section#questions nav#up a.active {
      color: red; }
    body#scenarios_new section#questions nav#up a:hover, body#scenarios_create section#questions nav#up a:hover {
      color: #d70000; }
    body#scenarios_new section#questions nav#down, body#scenarios_create section#questions nav#down {
      clear: both; }
      body#scenarios_new section#questions nav#down a:hover, body#scenarios_create section#questions nav#down a:hover {
        color: #d70000; }
  body#scenarios_new section#questions .question, body#scenarios_create section#questions .question {
    padding: 10px; }
    body#scenarios_new section#questions .question .information, body#scenarios_create section#questions .question .information {
      margin-bottom: 5px; }
      body#scenarios_new section#questions .question .information strong, body#scenarios_create section#questions .question .information strong {
        font-weight: bold; }
      body#scenarios_new section#questions .question .information a, body#scenarios_create section#questions .question .information a {
        color: blue; }
    body#scenarios_new section#questions .question .number, body#scenarios_create section#questions .question .number {
      font-weight: bold;
      width: 5%;
      float: left; }
    body#scenarios_new section#questions .question .question_text, body#scenarios_create section#questions .question .question_text {
      font-weight: bold; }
    body#scenarios_new section#questions .question ol.answers, body#scenarios_create section#questions .question ol.answers {
      padding-left: 20px;
      margin-left: 0;
      border-top: 1px solid #cccccc;
      margin-top: 5px;
      padding-top: 5px; }
      body#scenarios_new section#questions .question ol.answers li.answer, body#scenarios_create section#questions .question ol.answers li.answer {
        margin-left: 0;
        font-weight: bold;
        list-style-type: upper-alpha;
        margin-bottom: 15px;
        clear: both; }
        body#scenarios_new section#questions .question ol.answers li.answer label, body#scenarios_create section#questions .question ol.answers li.answer label {
          font-weight: normal; }
          body#scenarios_new section#questions .question ol.answers li.answer label:hover, body#scenarios_create section#questions .question ol.answers li.answer label:hover {
            color: #ff7f00;
            cursor: pointer; }
        body#scenarios_new section#questions .question ol.answers li.answer input[type=radio], body#scenarios_create section#questions .question ol.answers li.answer input[type=radio] {
          display: none; }
        body#scenarios_new section#questions .question ol.answers li.answer.active, body#scenarios_create section#questions .question ol.answers li.answer.active {
          color: red; }
    body#scenarios_new section#questions .question #user_details .item, body#scenarios_create section#questions .question #user_details .item {
      padding: 3px; }
      body#scenarios_new section#questions .question #user_details .item .field_with_errors, body#scenarios_create section#questions .question #user_details .item .field_with_errors {
        background-color: #f6182c;
        float: left;
        position: relative;
        height: 36px; }
      body#scenarios_new section#questions .question #user_details .item label, body#scenarios_create section#questions .question #user_details .item label {
        display: block;
        float: left;
        width: 60px;
        padding: 5px; }
      body#scenarios_new section#questions .question #user_details .item input, body#scenarios_create section#questions .question #user_details .item input {
        display: block;
        float: left;
        padding: 5px;
        width: 200px;
        margin: 4px; }
      body#scenarios_new section#questions .question #user_details .item input[type=submit], body#scenarios_create section#questions .question #user_details .item input[type=submit] {
        margin-left: 74px;
        width: 214px;
        border: 1px solid #cccccc;
        margin-bottom: 20px; }
        body#scenarios_new section#questions .question #user_details .item input[type=submit]:hover, body#scenarios_create section#questions .question #user_details .item input[type=submit]:hover {
          background-color: #f69409; }
/* ... */

